# lumina

./: package-lock.json  package.json  toggle_lumina.sh  toggle_lumina_deployment.sh  vite.config.ts
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: actions.rs  ai.rs  config.rs  lib.rs  models.rs  window.rs
src-tauri/src/search/: ai_search.rs  calculator.rs  files.rs  mod.rs
src/components/: AiResponseDisplay.tsx  SearchBar.tsx  SearchResultItem.tsx  SettingsComponent.tsx
